add_library(foo MODULE foo.c)
set_target_properties(foo PROPERTIES
  RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
  LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
  ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
)
if (TEST_INSTALL_DIRECTORY) 
  install(TARGETS foo DESTINATION "${TEST_INSTALL_DIRECTORY}/testdll")
endif() 
